--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "bootstrap": "^5.1.3",
+    "file-loader": "^6.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0"
